--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">My Name</h2>
+    <h2 class="w3-text-light-grey">Who Am I</h2>
     <hr style="width:200px" class="w3-opacity">
     <p> 
  Hard working and ambitious, I have always strived for the best, considering my experience, ideas and talent, I would like to be a part of the organization and put in my best efforts for the overall growth of the organization. 
